--- a/index.html
+++ b/index.html
@@ -7,11 +7,46 @@
    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-   <button>
+   <span>Geometria fonts regular ttf</span>
+   <button class="g-1">
       180 г
    </button>
    <span>
       Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Что языкового, меня речью решила его пор оксмокс города собрал наш там одна пустился если предупредила. Имени что свое большой предложения до точках мир, вопрос заманивший залетают жизни текстами снова алфавит рукописи имеет океана текст, буквоград над, эта семь. Строчка семь вопрос, что всеми, предложения, диких встретил злых на берегу текстами языкового коварный которое дорогу. Страну рот, рыбного встретил запятой живет маленький ipsum единственное обеспечивает вдали страна, однажды речью языком букв имени правилами повстречался пор оксмокс лучше большого рекламных пустился продолжил одна? Букв подпоясал он маленький одна. Меня пор предложения строчка!
    </span>
+
+   <span>Geometria online-fonts medium ttf</span>
+   <button class="g-2">
+      180 г
+   </button>
+
+   <button class="g-2">
+      test
+   </button>
+
+   <button class="g-2">
+      Test
+   </button>
+
+   <button class="g-2">
+      додати у кошик
+   </button>
+
+   <span>Geometria web-fonts medium ttf otf eot</span>
+   <button class="g-3">
+      180 г
+   </button>
+
+   <button class="g-3">
+      test
+   </button>
+
+   <button class="g-3">
+      Test
+   </button>
+
+   <button class="g-3">
+      додати у кошик
+   </button>
 </body>
 </html>
